--- a/index.html
+++ b/index.html
@@ -1,25 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>aquatech</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
-<div class="header">
-   <div class="container">
-       <h1 class="titulo">Aquatech</h1>
-       <ul class="navbar">
-        <li>Inicial</li>
-         <li>Simulador</li>
-         <li>|</li>
-         <li>Login</li>
-         <li>Cadastro</li>
-       </ul>
-   </div>
-</div>
 
+<body>
+
+    <div class="header">
+        <div class="container">
+            <h1 class="titulo">Aquatech</h1>
+            <ul class="navbar">
+                <li>Inicial</li>
+                <li>Simulador</li>
+                <li>|</li>
+                <li>Login</li>
+                <a href="./cadastro.html"><li>Cadastro</li></a>
+            </ul>
+        </div>
+    </div>
+    <div class="banner">
+        <div class="container">
+            <p>Preservando <b>hoje</b>, para existirem <b>amanhã</b></p>
+        </div>
+    </div>
+        <div class="social">
+            <div class="container">
+                <div class="box">
+                    <img src="./assets/imagens/planet-earth_color.png" alt="">
+                    <h2>Missão</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt sequi fuga ut deserunt sint,
+                        dolores eum expedita quis eos magnam corrupti ullam cum alias, soluta quidem. Quod maxime
+                        doloribus modi.
+
+                    </p>
+                </div>
+                <div class="box">
+                    <img src="./assets/imagens/lightbulb_color.png" alt="">
+                    <h2>Visão</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt sequi fuga ut deserunt sint,
+                        dolores eum expedita quis eos magnam corrupti ullam cum alias, soluta quidem. Quod maxime
+                        doloribus modi.
+
+                    </p>
+                </div>
+                <div class="box">
+                    <img src="./assets/imagens/growth_color.png" alt="">
+                    <h2>valores</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt sequi fuga ut deserunt sint,
+                        dolores eum expedita quis eos magnam corrupti ullam cum alias, soluta quidem. Quod maxime
+                        doloribus modi.
+
+                    </p>
+                </div>
+            </div>
+        </div>
+    
+    <div class="footer">
+        <div class="container">
+<p>Feito com amor &hearts; pelos alunos da SPTech &copy;
+
+</p>
+        </div>
+    </div>
 </body>
+
 </html>
